force-app/main/default/objects/Digital_Resource__c/Digital_Resource__c.object-meta.xml
<CustomObject>
    <description
  >A resource (PDF, Webinar, web page etc.) generally provided by a Sponsor to accompany a VDGS session or webinar.</description>
    <label>Digital Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>