force-app/main/default/objects/Digital_Resource__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the sponsor who provided the resource</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Digital Resources</relationshipLabel>
    <relationshipName>Digital_Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>