force-app/main/default/objects/Digital_Resource__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <defaultValue>&quot;document&quot;</defaultValue>
    <label>Resource Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>