force-app/main/default/objects/Digital_Resource__c/fields/Session_or_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Session_or_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The session or webinar which the resource is to accompany</description>
    <inlineHelpText
  >The session or webinar which the resource is to accompany</inlineHelpText>
    <label>Session or Webinar</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>