force-app/main/default/objects/Digital_Resource__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description
  >The URL link to the resource (PDF, Web Page, Webinar etc.)</description>
    <inlineHelpText
  >The URL link to the resource (PDF, Web Page, Webinar etc.)</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>